@@ -1,4 +1,4 @@
-# @(#)Ident: CPANTesting.pm 2013-04-28 22:56 pjf ;
+# @(#)Ident: CPANTesting.pm 2013-04-29 21:16 pjf ;
 # Bob-Version: 1.8
 
 package CPANTesting;
@@ -25,8 +25,7 @@ sub test_exceptions {
 
    $p->{stop_tests}              and return 'CPAN Testing stopped in Build.PL';
    $osname eq q(mirbsd)          and return 'Mirbsd  OS unsupported';
-   $host   eq q(c-9d2392d06fcb4) and return
-      "Stopped Ciornii ${host} - 07d44483-6c00-1014-9401-8524c7768a8d";
+   $osname eq q(mswin32)         and return 'MSWin32 OS unsupported';
    $host   eq q(k83)             and return
       "Stopped Konig   ${host} - 07224fc0-aed9-11e2-9633-3d74c1508286";
    return 0;
