@@ -1,6 +1,7 @@
 Revision history for Module::Provision
 
 0.8.2     2013-04-29 21:52:27
+          - Giving up on MSWin32
           - Bumped version on C:U
           - New templates directory ~/.module_provision
 
